[tool.poetry]
name = "cipher_jlg2273"
version = "0.1.0"
description = "A package to help decipher secret codes"
authors = ["Jessica Gunson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
